# lokalize

./: .env.example  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/lokalize/rag/: __init__.py  query_engine.py  web_scraper.py
tests/: test_rag.py
