[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lokalize"
version = "0.1.0"
description = "AI-powered fashion localization with cultural context"
authors = [{name = "Douglas Danso", email = "douglas@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-aws>=0.1.0",
    "boto3>=1.34.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "faiss-cpu>=1.7.4",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.5.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
